--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
@@ -492,7 +492,7 @@
   - type: Sprite
     state: pill16
   - type: Label
-    currentLabel: dexalin 10u
+    currentLabel: pill-canister-dexalin-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -508,7 +508,7 @@
   suffix: Dexalin 10u, 7
   components:
   - type: Label
-    currentLabel: dexalin 10u
+    currentLabel: pill-canister-dexalin-10u
   - type: StorageFill
     contents:
     - id: PillDexalin
@@ -525,7 +525,7 @@
   - type: Sprite
     state: pill10
   - type: Label
-    currentLabel: dylovene 10u
+    currentLabel: pill-canister-dylovene-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -541,7 +541,7 @@
   suffix: Dylovene 10u, 5
   components:
   - type: Label
-    currentLabel: dylovene 10u
+    currentLabel: pill-canister-dylovene-10u
   - type: StorageFill
     contents:
     - id: PillDylovene
@@ -558,7 +558,7 @@
   - type: Sprite
     state: pill17
   - type: Label
-    currentLabel: hyronalin 10u
+    currentLabel: pill-canister-hyronalin-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -574,7 +574,7 @@
   suffix: Hyronalin 10u, 5
   components:
   - type: Label
-    currentLabel: hyronalin 10u
+    currentLabel: pill-canister-hyronalin-10u
   - type: StorageFill
     contents:
     - id: PillHyronalin
@@ -591,7 +591,7 @@
   - type: Sprite
     state: pill9
   - type: Label
-    currentLabel: potassium iodide 10u
+    currentLabel: pill-canister-potassium-iodide-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -607,7 +607,7 @@
   suffix: Potassium iodide 10u, 5
   components:
   - type: Label
-    currentLabel: potassium iodide 10u
+    currentLabel: pill-canister-potassium-iodide-10u
   - type: StorageFill
     contents:
     - id: PillPotassiumIodide
@@ -624,7 +624,7 @@
   - type: Sprite
     state: pill14
   - type: Label
-    currentLabel: iron 10u
+    currentLabel: pill-canister-iron-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -644,7 +644,7 @@
   - type: Sprite
     state: pill13
   - type: Label
-    currentLabel: copper 10u
+    currentLabel: pill-canister-copper-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -660,7 +660,7 @@
   suffix: Iron 10u, 5
   components:
   - type: Label
-    currentLabel: iron 10u
+    currentLabel: pill-canister-iron-10u
   - type: StorageFill
     contents:
     - id: PillIron
@@ -673,7 +673,7 @@
   suffix: Copper 10u, 5
   components:
   - type: Label
-    currentLabel: copper 10u
+    currentLabel: pill-canister-copper-10u
   - type: StorageFill
     contents:
     - id: PillCopper
@@ -690,7 +690,7 @@
   - type: Sprite
     state: pill4
   - type: Label
-    currentLabel: kelotane 10u
+    currentLabel: pill-canister-kelotane-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -706,7 +706,7 @@
   suffix: Kelotane 10u, 5
   components:
   - type: Label
-    currentLabel: kelotane 10u
+    currentLabel: pill-canister-kelotane-10u
   - type: StorageFill
     contents:
     - id: PillKelotane
@@ -723,7 +723,7 @@
   - type: Sprite
     state: pill8
   - type: Label
-    currentLabel: dermaline 10u
+    currentLabel: pill-canister-dermaline-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -739,7 +739,7 @@
   suffix: Dermaline 10u, 5
   components:
   - type: Label
-    currentLabel: dermaline 10u
+    currentLabel: pill-canister-dermaline-10u
   - type: StorageFill
     contents:
     - id: PillDermaline
@@ -769,7 +769,7 @@
   - type: Sprite
     state: pill3
   - type: Label
-    currentLabel: tricordrazine 10u
+    currentLabel: pill-canister-tricordrazine-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -785,7 +785,7 @@
   suffix: Tricordrazine 10u, 5
   components:
   - type: Label
-    currentLabel: tricordrazine 10u
+    currentLabel: pill-canister-tricordrazine-10u
   - type: StorageFill
     contents:
     - id: PillTricordrazine
@@ -802,7 +802,7 @@
   - type: Sprite
     state: pill5
   - type: Label
-    currentLabel: bicaridine 10u
+    currentLabel: pill-canister-bicaridine-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -818,7 +818,7 @@
   suffix: Bicaridine 10u, 5
   components:
   - type: Label
-    currentLabel: bicaridine 10u
+    currentLabel: pill-canister-bicaridine-10u
   - type: StorageFill
     contents:
     - id: PillBicaridine
@@ -835,7 +835,7 @@
   - type: Sprite
     state: pill21
   - type: Label
-    currentLabel: charcoal 10u
+    currentLabel: pill-canister-charcoal-10u
   - type: SolutionContainerManager
     solutions:
       food:
@@ -851,7 +851,7 @@
   suffix: Charcoal 10u, 3
   components:
   - type: Label
-    currentLabel: charcoal 10u
+    currentLabel: pill-canister-charcoal-10u
   - type: StorageFill
     contents:
     - id: PillCharcoal
