--- a/Resources/Prototypes/_WL/Entities/Mobs/Species/android.yml
+++ b/Resources/Prototypes/_WL/Entities/Mobs/Species/android.yml
@@ -6,7 +6,7 @@
   - MobRespirator
   - MobAtmosStandard
   - MobFlammable
-  - BaseMobSpecies
+  - BaseMobSpeciesOld
   id: BaseMobAndroid
   abstract: true
   components:
