--- a/Resources/Prototypes/_WL/Species/android.yml
+++ b/Resources/Prototypes/_WL/Species/android.yml
@@ -7,6 +7,8 @@
   markingLimits: MobAndroidMarkingLimits
   dollPrototype: MobAndroidDummy
   skinColoration: Hues
+  minHeight: 120
+  maxHeight: 230
 
 - type: speciesBaseSprites
   id: MobAndroidSprites
