--- a/Resources/Prototypes/_WL/Species/golem.yml
+++ b/Resources/Prototypes/_WL/Species/golem.yml
@@ -14,6 +14,8 @@
   skinColoration: Hues
   sexes:
   - Unsexed
+  minHeight: 110
+  maxHeight: 220
 
 - type: speciesBaseSprites
   id: MobGolemSprites
