--- a/Resources/Prototypes/Corvax/Species/vulpkanin.yml
+++ b/Resources/Prototypes/Corvax/Species/vulpkanin.yml
@@ -13,11 +13,10 @@
   femaleFirstNames: NamesVulpFirstFemale
   maleLastNames: NamesVulpLast # Corvax-LastnameGender
   femaleLastNames: NamesVulpLast # Corvax-LastnameGender
-  # WL-Change-start
+  # WL-Changes-start: Height
   minHeight: 140
   maxHeight: 185
-  maxItemHeight: 139
-  # WL-Change-end
+  # WL-Changes-end: Height
 
 - type: speciesBaseSprites
   id: MobCorvaxVulpkaninSprites
