--- a/Resources/Prototypes/Species/arachnid.yml
+++ b/Resources/Prototypes/Species/arachnid.yml
@@ -14,6 +14,10 @@
   femaleLastNames: NamesArachnidLast # Corvax-LastnameGender
   sexes:
   - Unsexed
+  # WL-Changes-start: Height
+  minHeight: 150
+  maxHeight: 230
+  # WL-Changes-end: Height
 
 - type: speciesBaseSprites
   id: MobArachnidSprites
