--- a/Resources/Prototypes/Species/human.yml
+++ b/Resources/Prototypes/Species/human.yml
@@ -7,6 +7,10 @@
   markingLimits: MobHumanMarkingLimits
   dollPrototype: MobHumanDummy
   skinColoration: HumanToned
+  # WL-Changes-start: Height
+  minHeight: 145
+  maxHeight: 195
+  # WL-Changes-end: Height
 
 # The lack of a layer means that
 # this person cannot have round-start anything
