--- a/Resources/Prototypes/Species/moth.yml
+++ b/Resources/Prototypes/Species/moth.yml
@@ -12,6 +12,10 @@
   femaleFirstNames: NamesMothFirstFemale
   maleLastNames: NamesMothLast # Corvax-LastnameGender
   femaleLastNames: NamesMothLast # Corvax-LastnameGender
+  # WL-Changes-start: Height
+  minHeight: 150
+  maxHeight: 210
+  # WL-Changes-end: Height
 
 - type: speciesBaseSprites
   id: MobMothSprites
