--- a/Resources/Prototypes/_WL/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/_WL/Entities/Mobs/Species/felinid.yml
@@ -27,7 +27,7 @@
         Slash: 5
   # - type: Thieving
   #   stealthy: true
-    stripTimeReduction: 2.5
+  #  stripTimeReduction: 2.5
   - type: Speech
     speechSounds: Alto
     allowedEmotes: ['Purr']
