--- a/Resources/Prototypes/_Offbrand/base_mob.yml
+++ b/Resources/Prototypes/_Offbrand/base_mob.yml
@@ -40,14 +40,14 @@
       Bloodloss: [0, 0]
   - type: UniqueWoundOnDamage
     wounds:
-    - damageTypes: [Slash, Blunt, Piercing]
-      minimumDamage: 15
-      minimumTotalDamage: 25
+    - damageTypes: [Slash, Piercing]
+      minimumDamage: 18
+      minimumTotalDamage: 35
       woundPrototype: WoundArterialBleeding
       woundDamages:
         damageDict:
           Slash: 5
-      damageProbabilityCoefficient: 0.01
+      damageProbabilityCoefficient: 0.002
       damageProbabilityConstant: 0
     - damageTypes: [Blunt]
       minimumDamage: 20
@@ -223,11 +223,11 @@
     oxygen: 10
   - type: BrainDamageOxygenation
     oxygenationDamageThresholds:
-      0.10: [1.0, [100, 0.75]]
-      0.30: [0.7, [ 90, 0.75]]
-      0.60: [0.6, [ 60, 0.75]]
-      0.70: [0.4, [ 40, 0.75]]
-      0.85: [0.3, [ 20, 0.75]]
+      0.10: [0.7, [100, 0.6]]
+      0.30: [0.6, [ 90, 0.5]]
+      0.60: [0.5, [ 60, 0.4]]
+      0.70: [0.4, [ 40, 0.3]]
+      0.85: [0.3, [ 20, 0.2]]
     oxygenDepletionThresholds:
       0.30: [0.6, 1]
     oxygenRegeneration: 1
