--- a/Resources/Prototypes/Recipes/Lathes/Packs/medical.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/medical.yml
@@ -104,3 +104,7 @@
   - StasisBedMachineCircuitboard
   - CryoPodMachineCircuitboard
   - BiomassReclaimerMachineCircuitboard
+  - MedicalScannerMachineCircuitboard # WL-Offmed: Cloning start
+  - CloningPodMachineCircuitboard
+  - CloningConsoleComputerCircuitboard
+  # WL-Offmed: Cloning end
