--- a/Resources/Prototypes/_WL/Entities/Mobs/Species/golem.yml
+++ b/Resources/Prototypes/_WL/Entities/Mobs/Species/golem.yml
@@ -4,7 +4,7 @@
   id: BaseMobGolem
   parent:
   - MobFlammable
-  - BaseMobSpecies
+  - BaseMobSpeciesOld
   abstract: true
   components:
     - type: Damageable
