--- a/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
@@ -132,6 +132,9 @@
     - id: HandheldGPSBasic
     - id: MedkitFilled
       prob: 0.3
+    # WL-Corvax-Edit-Start
+    - id: SurgicalCaseFilled
+    # WL-Corvax-Edit-End
 
 - type: entity
   parent: LockerParamedic
