--- a/Resources/Prototypes/Recipes/Lathes/Packs/medical.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/medical.yml
@@ -34,6 +34,9 @@
   - Drill
   - Saw
   - Hemostat
+  # WL-Corvax-Edit-Start
+  - SurgicalCase
+  # WL-Corvax-Edit-End
 
 - type: latheRecipePack
   id: MedicalStatic
