--- a/Resources/Prototypes/Entities/Objects/Misc/books.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/books.yml
@@ -344,7 +344,7 @@
       color: "#f7d61a"
   - type: GuideHelp
     guides:
-    - CorporateLaw # Corvax-MRP
+    - WLCorporateLaw # WL-Changes
 
 - type: entity
   parent: BookBase
