--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -403,6 +403,7 @@
   - SurvivalSecurity
   - Trinkets
   - WLNeck # WL-Changes: Neck add
+  - HOSBadges # WL-Changes
   - SecurityStar
   - GroupSpeciesBreathToolSecurity
 
@@ -419,6 +420,7 @@
   - SurvivalSecurity
   - Trinkets
   - WLNeck # WL-Changes: Neck add
+  - WardenBadges # WL-Changes
   - SecurityStar
   - GroupSpeciesBreathToolSecurity
 
@@ -436,6 +438,7 @@
   - SurvivalSecurity
   - Trinkets
   - WLNeck # WL-Changes: Neck add
+  - OfficerBadges # WL-Changes
   - SecurityStar
   - GroupSpeciesBreathToolSecurity
 
@@ -452,6 +455,7 @@
   - SurvivalSecurity
   - Trinkets
   - WLNeck # WL-Changes: Neck add
+  - DetectiveBadges # WL-Changes
   - SecurityStar
   - GroupSpeciesBreathToolSecurity
   - PhotoGroup # WL-Changes: Photo to lodauts
@@ -465,6 +469,7 @@
   - SurvivalSecurity
   - Trinkets
   - WLNeck # WL-Changes: Neck add
+  - CadetBadges # WL-Changes
   - GroupSpeciesBreathToolSecurity
 
 # Medical
