Обновление CorvaxWLPaper, CorvaxWLKolter, wl_centcomm (#368)
* 4123

* 412

* 123

* 2345

* изменено:      Resources/Maps/_WL/wl_centcomm.yml
	изменено:      Resources/Maps/_WL/wl_kolter.yml
	изменено:      Resources/Maps/_WL/wl_nanostation.yml
	изменено:      Resources/Maps/_WL/wl_paper.yml
	изменено:      Resources/Maps/_WL/wl_rest.yml
	изменено:      Resources/Prototypes/_WL/Procedural/Themes/maints_wlpaper.yml
	изменено:      Resources/Prototypes/_WL/Procedural/Themes/maints_wlrenga.yml
	Resources/Maps/_WL/Dungeon/maints_wlpaper.yml
	Resources/Maps/_WL/Shuttles/wl_ERT_shuttle.yml
	Resources/Maps/_WL/Shuttles/wl_RCC_shuttle.yml

* новый файл:    Resources/Maps/_WL/Dungeon/maints_wlpaper.yml
	новый файл:    Resources/Maps/_WL/Shuttles/wl_ERT_shuttle.yml
	новый файл:    Resources/Maps/_WL/Shuttles/wl_RCC_shuttle.yml
	изменено:      Resources/Maps/_WL/wl_centcomm.yml
	изменено:      Resources/Maps/_WL/wl_kolter.yml
	изменено:      Resources/Maps/_WL/wl_paper.yml
	новый файл:    Resources/Prototypes/_WL/Maps/Whitelist/Entities/wl_paper.yml

* git push
	изменено:      Content.Server/Procedural/DungeonSystem.Rooms.cs
	изменено:      Content.Server/Procedural/DungeonSystem.cs
	изменено:      Resources/Prototypes/_WL/Procedural/Themes/maints_wlpaper.yml
	изменено:      Resources/Prototypes/_WL/Procedural/Themes/maints_wlrenga.yml
	изменено:      Resources/Prototypes/_WL/tags.yml

* изменено:      Resources/Maps/_WL/wl_kolter.yml
	изменено:      Resources/Maps/_WL/wl_nanostation.yml
	изменено:      Content.Server/Procedural/DungeonSystem.Rooms.cs

* изменено:      Content.Server/Procedural/DungeonSystem.Rooms.cs

* изменено:      Resources/Maps/_WL/wl_kolter.yml

* изменено:      Resources/Maps/_WL/wl_kolter.yml

* изменено:      Resources/Maps/_WL/wl_kolter.yml

* изменено:      Resources/Maps/_WL/wl_kolter.yml

* изменено:      Resources/Maps/_WL/wl_kolter.yml

---------

Co-authored-by: 0leshe <aliaksei.kachkov@gmail.com>

--- a/Resources/Prototypes/_WL/Maps/Whitelist/wl_paper.yml
+++ b/Resources/Prototypes/_WL/Maps/Whitelist/wl_paper.yml
@@ -1,7 +1,7 @@
 # Special Map for Corvax - Whitelist
 - type: gameMap
   id: CorvaxWLPaper
-  mapName: 'Папер'
+  mapName: 'Пейпер'
   mapPath: /Maps/_WL/wl_paper.yml
   maxRandomOffset: 0
   randomRotation: false
