--- a/Resources/Prototypes/Device/devicenet_frequencies.yml
+++ b/Resources/Prototypes/Device/devicenet_frequencies.yml
@@ -59,6 +59,11 @@
   frequency: 1939
 
 - type: deviceFrequency
+  id: SurveillanceCameraCustom
+  name: device-frequency-prototype-name-surveillance-camera-custom
+  frequency: 1940
+
+- type: deviceFrequency
   id: AtmosMonitor
   name: device-frequency-prototype-name-atmos
   frequency: 1621
