--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v4.2.2
       with:
         submodules: 'recursive'
-        ref: offmed
+        ref: oct-rev-master
 
     # Corvax-Secrets-Start
     - name: Setup secrets
