--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Department/security.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Department/security.yml
@@ -1,4 +1,4 @@
-# Security 
+# Security
 - type: entity
   name: security loot spawner
   suffix: Gear, Simple
@@ -20,7 +20,7 @@
         - Handcuffs
         - Zipties
         - FlashlightSeclite
-        - Tourniquet
+        - TourniquetOffbrand #WL-Offmed: TourniquetOffbrand
       chance: 0.85
 
 - type: entity
@@ -50,9 +50,9 @@
         - FlashlightSeclite
         - GrenadeFlashBang
         - SecurityWhistle
-        - Tourniquet
+        - TourniquetOffbrand #WL-Offmed: TourniquetOffbrand
       chance: 0.85
- 
+
 # Armory loot spawner
 # Automatics are a complete mess right now, so the AK-MS And WT-550 have been commented out for consistency's sake. I have no idea what role these guns are supposed to fufill.
 - type: entity
